--- a/daily/2017.11.03.md
+++ b/daily/2017.11.03.md
@@ -1,16 +1,22 @@
-钱包管理
-
 分层钱包，规格见BIP44：https://github.com/bitcoin/bips/blob/master/bip-0044.mediawiki
-
+Account 代表了一个从属于Wallet的符合BIP44规范的钱包对象
 WalletDB <= AsyncObject <= EventEmitter
-
 导入了外部地址到当前钱包，但无法查询到与之匹配的UTXO，说明钱包导入没有成功
-
-HD钱包地址，和分离地址是否可以和谐相处？
+HD钱包地址和离散地址是否可以和谐相处？
 
 现有的RPC系统实现中，如果Windows环境下的控制台，输入JSON类型的命令行参数，会由于转义等问题无法正常执行
 目前对底层做了若干修改，并规定：
   ！！！命令行参数中的JSON对象，第一层引号使用双引号，第二层引号使用单引号。
 经此，可以正常执行控制台指令。
 对于多层嵌套的情形尚未作研究。
-F
+
+比较数字数组时，
+[].sort((a,b)=>{return a>b;}) 和 [].sort((a,b)=>{if(a>b){return 1}else if(a<b){return -1}else{return 0})}) 是等价的。
+
+ASCII: 按16进制，数字30开始 大写字母41开始 小写字母61开始
+
+Peer：对等网络终端类，代表了对等网络中的一个终端实例，分为inbound和outbound两种，相当于Socke编程中的Server和Client
+Peer继承自EventEmitter,主要方法和流程包括：
+1、
+
+Pool：对等网络管理类
